Replace the inefficient Number constructor with static Number.valueOf() method.
Using new NumberConstructor(num) is guaranteed to always result in a new object whereas Number.valueOf(num) allows caching of values to be done by the compiler, class library, or JVM.
Using of cached values avoids object allocation and the code will be faster.
http://findbugs.sourceforge.net/bugDescriptions.html#DM_NUMBER_CTOR
http://findbugs.sourceforge.net/bugDescriptions.html#DM_FP_NUMBER_CTOR